# creature-generator

./: README.md
custom_nn/: attention_model.py  dataset.py  few_shot.txt  pyproject.toml  tokenizer.py  training.ipynb
dataset_creation/: bard_annot_images.ipynb  blip_annot_images.ipynb  blip_fine_tuning.ipynb  spore_scrap.ipynb
